Fix button alignment

--- a/style.css
+++ b/style.css
@@ -462,10 +462,6 @@ nav .caret {
     margin-bottom: 40px;
 }
 
-.btn {
-    margin: 0 5px 5px 0;
-}
-
 .btn.pull-right {
     margin: 0 0 5px 5px;
 }
@@ -715,12 +711,14 @@ p {
 }
 
 .cta-hero {
+    height: 48px;
     margin-top: 22px;
     color: #FFFFFF!important;
     text-transform: uppercase;
-    padding: 12px 28px 12px 28px;
+    padding: 0 28px;
     font-size: 16px;
     font-weight: 700;
+    line-height: 48px;
 }
 
 nav.social {
